 asim-run                  Locally Modified          239 
 asim-batch                Locally Modified          239 

Directory lib/libawb
 inifile.cpp               Locally Modified          239 

Enhanced the search for rcfile options to include the file
<workspace>awb.config. So now program's such as regression.*
and asim-run will look for their options first in awb.config,
then in ~/.asim/asimrc and then in <installdir>/etc/asim/asimrc.

All the scripts that use options have been enchanced with an
--options switch that lists the options that the program uses,
and their current values.

All of this means that one can set options on a per workspace
basis, so if, for example, one has a workspace for working on
hasim, then they can set up default regressions for that workspace
to regress the hasim packages by adding the following to their
awb.config file for that workspace.

awb.config:
.
.
.
[regression.launcher]
PACKAGES=hasim,hasim-mips
.
.
.

Finally, the change to inifile.cpp in libawb is to allow dot (.)
in a inifile group name, and must be installed system-wide before
the above funcionality will function correctly.

----------
jsemer      Date: Fri May 30 20:09:30 EDT 2008  CSN: CSN-asimcore-241
                  Sat May 31 00:09:30 UTC 2008


Directory libperl/Asim/lib/Asim/Module
 Param.pm                  Locally Modified          240 

Directory libperl/Asim/lib/Asim
 Module.pm                 Locally Modified          240 

Updating with simcore changes (rev. 2579 - Michael Adler)

Record whether a parameter is an integer, string or unknown.

----------
jsemer      Date: Fri May 30 21:00:31 EDT 2008  CSN: CSN-asimcore-242
                  Sat May 31 01:00:31 UTC 2008


Directory lib/libasim/include
 Makefile.in               Locally Modified          240 
 Makefile.am               Locally Modified          240 

Updating with simcore changes (rev. 2580 - Joel Emer)

Add longstanding absence of asim/atoh.i to installation.

